4.6.17-SNAPSHOT unreleased
---------

    [  ] Bump jsf-test from 1.1.14 to 1.1.16
    [  ] Bump htmlunit from 2.30 to 2.56.0

4.6.16.ayg 2022-01-09
---------

    [  ] Reupload of 4.6.15.ayg

4.6.15.ayg 2022-01-09
---------

    [  ] Use AES instead of DES for encripted base64 generation
    [  ] Secure random in javascript code
    [  ] Bump jsoup from 1.5.2 to 1.14.2
    [  ] Upgrade jquery-ui to 1.13.0
    [  ] Upgrade ckeditor to 4.17.1


4.6.14.ayg 2021-05-13
---------

    [  ] Code cleanup
    [  ] Update httpclient to 4.5.13 
    [  ] Update to EasyMock 3.0
    [  ] Update jsf-test 1.1.14
    [  ] Update junit to 4.13.2
    [  ] Upgrade jquery to 3.6.0
    [  ] Upgrade guava from 20 to 30

4.6.13.ayg 2020-07-28
---------

    [  ] jQuery upgraded to 3.5.1

4.6.12.ayg 2020-04-16
---------

    [  ] Fix delete link not rendered in fileupload after jQuery migration.
    [  ] upgrade shrinkwrap.resolver to 2.2.7

4.6.11.ayg 2020-04-14
---------

    [  ] richfaces-cdk-maven-plugin Upgraded to com.github.albfernandez.richfaces.cdk:richfaces-cdk-maven-plugin:4.6.1.ayg
    [  ] jQuery upgraded to 3.5.0


4.6.10.ayg 2020-04-09
---------

    [   ] richfaces-cdk-maven-plugin Upgraded to com.github.albfernandez.richfaces.cdk:richfaces-cdk-maven-plugin:4.6.0.ayg
    [ #8] java 11 compatibility

4.6.9.ayg 2019-05-05
---------

    [   ] JQuery upgraded to 3.4.1
    [#34] Update plugins/dependencies, add support for tomcat 85 / 9 
    [#30] Fixed: maxFilesQuantity attribute server-side validation does nothing 
    [#19] Lots of plugins/dependencies updated.
   

4.6.8.ayg 2019-03-02
---------

    [#25] a4j onComplete functions do not work properly (in combination with PrimeFaces)


4.6.7.ayg 2019-02-17
---------

    [#23] NullPointerException ResourceHandlerImpl.java:299 on WildFly15
    [#27] upgrade CKEditor to 4.11.2


4.6.6.ayg 2019-01-17
----------

    [#22] Smoke tests fail without any changes 
    [#21] Remove serialization code  


	
4.6.5.ayg 2018-08-22