@@ -26,19 +26,19 @@ TL;DR
 
 Running a full build including smoke tests:
 
-    mvn install -Dintegration=wildfly82 -Dsmoke
+    mvn install -Dintegration=wildfly81 -Dsmoke
 
 Running particular framework test (on Chrome) from console:
 
-    // console 1: start WildFly 8.2 
-    ./wildfly-8.2.0.Final/bin/standalone.sh
+    // console 1: start WildFly 8.1
+    ./wildfly-8.1.0.Final/bin/standalone.sh
 
     // console 2: start Selenium Server
     java -jar selenium-server-standalone-${VERSION}.jar -Dwebdriver.chrome.driver=/opt/google/chrome/chromedriver
     
     // console 3: run a test
     cd richfaces/core/
-    mvn verify -Dintegration=wildfly82-remote -Dbrowser=chrome -Dreusable -DskipTests=true -Dtest=IT_RF12765
+    mvn verify -Dintegration=wildfly81-remote -Dbrowser=chrome -Dreusable -DskipTests=true -Dtest=IT_RF12765
 
 You can also add following parameters to skip CDK build and/or Resource Optimization and/or disable unit tests:
 
@@ -144,7 +144,7 @@ To switch the browser used in test execution, you can use the following Maven pr
 Note: to use chrome, you must download chrome driver from [https://sites.google.com/chromium.org/driver/](https://sites.google.com/chromium.org/driver/) and install to `/opt/google/crhome/chromedriver`
 
 
-By default, tests will use headless browser `phantomjs`.
+By default, tests will use headless browser `chrome`.
 
 
 Using reusable Selenium session
@@ -231,7 +231,6 @@ The intention is to use more categories as required to:
 Test inclusion / exclusion intends to provide as extensive test coverage for all supported environments, but still avoid the known failures to affect test results.  The categories should be designed for two purposes, as evidenced from the samples:
 
 * `JavaEEOnly` - these tests will be run *only* on Java EE capable containers
-* `FailingOnPhantomJS` - these tests *won't* be executed on PhantomJS
 * `FailingOnMyFaces`, `FailingOnFirefox`, `FailingOnTomcat` - these tests are *currently failing*, but they should pass once the referenced issue is fixed
 
 Note that those categories use keywords `*Only`, `No*` and `FailingOn*` in order to be sufficiently descriptive.
@@ -243,7 +242,7 @@ There is a possibility to take screenshots during executing tests. Its done via 
 
 To take screenshots one has to run the build with `take-screenshots` profile.
 
-    mvn verify -Dintegration=wildfly82 -Ptake-screenshots
+    mvn verify -Dintegration=wildfly81 -Ptake-screenshots
 
     
 Managed Containers 
