@@ -1,10 +1,0 @@
-package category;
-
-/**
- * <p>
- * Test doesn't work on PhantomJS browser
- * </p>
- */
-public interface FailingOnPhantomJS {
-
-}
