@@ -10,7 +10,6 @@ import org.openqa.selenium.firefox.FirefoxDriver;
 import org.openqa.selenium.htmlunit.HtmlUnitDriver;
 import org.openqa.selenium.ie.InternetExplorerDriver;
 import org.openqa.selenium.opera.OperaDriver;
-import org.openqa.selenium.phantomjs.PhantomJSDriver;
 import org.openqa.selenium.remote.BrowserType;
 import org.openqa.selenium.remote.RemoteWebDriver;
 
@@ -20,9 +19,8 @@ public enum Browser {
     INTERNET_EXPLORER(InternetExplorerDriver.class),
     CHROME(ChromeDriver.class, BrowserType.CHROME),
     OPERA(OperaDriver.class),
-    HTML_UNIT(HtmlUnitDriver.class),
-    PHANTOMJS(PhantomJSDriver.class, BrowserType.PHANTOMJS);
-
+    HTML_UNIT(HtmlUnitDriver.class);
+	
     private final Class<?> clazz;
     private final Set<String> browserNames;
 
