@@ -67,8 +67,6 @@
         <property name="remoteAddress">http://localhost:4444/wd/hub/</property>
 
         <property name="chromeDriverBinary">/opt/google/chrome/chromedriver</property>
-        <property name="phantomjs.binary.path">${arquillian.drone.phantomjs.binary.path}</property>
-
     </extension>
 
     <extension qualifier="richfaces">
