@@ -606,7 +606,7 @@ Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
 
                 <!-- Arquillian Configuration -->
                 <arquillian.debug>false</arquillian.debug>
-                <arquillian.drone.browser>phantomjs</arquillian.drone.browser>
+                <arquillian.drone.browser>chrome</arquillian.drone.browser>
                 <arquillian.drone.reusable>false</arquillian.drone.reusable>
                 <arquillian.richfaces.version/>
                 <arquillian.richfaces.servletContainerSetup>false</arquillian.richfaces.servletContainerSetup>
@@ -626,7 +626,6 @@ Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
 
                 <!-- JUnit Categories Selection -->
                 <testCategory.excluded.container/>
-                <testCategory.excluded.browser>AND NOT category.FailingOnPhantomJS</testCategory.excluded.browser>
                 <testCategory.excluded.jsf/>
             </properties>
             <dependencies>
@@ -792,20 +791,7 @@ Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
             </build>
         </profile>
 
-        <!-- Browsers -->
-        <profile>
-            <id>browser-phantomjs</id>
-            <activation>
-                <property>
-                    <name>browser</name>
-                    <value>phantomjs</value>
-                </property>
-            </activation>
-            <properties>
-                <arquillian.drone.browser>phantomjs</arquillian.drone.browser>
-                <testCategory.excluded.browser>AND NOT category.FailingOnPhantomJS</testCategory.excluded.browser>
-            </properties>
-        </profile>
+        <!-- Browsers -->       
         <profile>
             <id>browser-chrome</id>
             <activation>
