@@ -33,7 +33,6 @@ import org.junit.experimental.categories.Category;
 import org.richfaces.photoalbum.ftest.webdriver.fragments.view.PhotoView;
 import org.richfaces.photoalbum.ftest.webdriver.fragments.view.PhotoView.CommentsPanel;
 
-import category.FailingOnPhantomJS;
 
 /**
  * Every method starts with login(), cannot put it in @BeforeMethod because of https://issues.jboss.org/browse/ARQGRA-309
@@ -55,7 +54,6 @@ public class TestAddAndDeleteComment extends AbstractPhotoalbumTest {
     }
 
     @Test
-    @Category(FailingOnPhantomJS.class)
     public void addComment() {
         login();
 
@@ -99,7 +97,6 @@ public class TestAddAndDeleteComment extends AbstractPhotoalbumTest {
     }
 
     @Test
-    @Category(FailingOnPhantomJS.class)
     public void deleteComment() {
         // firstly need to add comment if its not already present (includes login)
         addSingleComment();
