@@ -24,7 +24,6 @@ package org.richfaces.photoalbum.ftest.webdriver.tests;
 import org.junit.Test;
 import org.junit.experimental.categories.Category;
 
-import category.FailingOnPhantomJS;
 
 /**
  * @author <a href="mailto:jstefek@redhat.com">Jiri Stefek</a>
@@ -35,7 +34,6 @@ public class TestUserLogging2 extends AbstractPhotoalbumTest {
      * Removed from TestUserLogging, cannot get rid of G+ in cache
      */
     @Test
-    @Category({ FailingOnPhantomJS.class })
     public void testLoginUser_loginWithSocials_logout() {
         getPage().login("amarkhel", "12345");
         getPage().checkUserLogged("amarkhel", true, false, false);
