@@ -767,7 +767,7 @@
 
                 <!-- Arquillian Configuration -->
                 <arquillian.debug>false</arquillian.debug>
-                <arquillian.drone.browser>phantomjs</arquillian.drone.browser>
+                <arquillian.drone.browser>chrome</arquillian.drone.browser>
                 <arquillian.drone.reusable>false</arquillian.drone.reusable>
                 <arquillian.richfaces.version />
                 <arquillian.richfaces.servletContainerSetup>false</arquillian.richfaces.servletContainerSetup>
@@ -793,7 +793,6 @@
 
                 <!-- JUnit Categories Selection -->
                 <testCategory.excluded.container />
-                <testCategory.excluded.browser>AND NOT category.FailingOnPhantomJS</testCategory.excluded.browser>
                 <testCategory.excluded.jsf />
             </properties>
             <dependencies>
@@ -937,20 +936,7 @@
                     </plugin>
                 </plugins>
             </build>
-        </profile>
-        <profile>
-            <id>browser-phantomjs</id>
-            <activation>
-                <property>
-                    <name>browser</name>
-                    <value>phantomjs</value>
-                </property>
-            </activation>
-            <properties>
-                <testCategory.excluded.browser>AND NOT category.FailingOnPhantomJS</testCategory.excluded.browser>
-                <arquillian.drone.browser>phantomjs</arquillian.drone.browser>
-            </properties>
-        </profile>
+        </profile>       
         <profile>
             <id>browser-chrome</id>
             <activation>
