@@ -463,9 +463,7 @@
 
                 <!-- Arquillian Configuration -->
                 <arquillian.debug>false</arquillian.debug>
-                <arquillian.drone.browser>phantomjs</arquillian.drone.browser>
-                <!-- part of the path is the md5 hash of the phantomjs zip package, so if phantomjs gets updated this should too -->
-                <arquillian.drone.phantomjs.binary.path>target/drone/1c947d57fce2f21ce0b43fe2ed7cd361/phantomjs-2.1.1-linux-x86_64/bin/phantomjs</arquillian.drone.phantomjs.binary.path>
+                <arquillian.drone.browser>chrome</arquillian.drone.browser>
                 <arquillian.drone.reusable>false</arquillian.drone.reusable>
                 <arquillian.richfaces.version />
                 <arquillian.richfaces.servletContainerSetup>false</arquillian.richfaces.servletContainerSetup>
@@ -491,7 +489,6 @@
                 <testCategory.included.default>NOT category.None</testCategory.included.default>
                 <testCategory.excluded.default>category.Failing</testCategory.excluded.default>
                 <testCategory.excluded.container />
-                <testCategory.excluded.browser>AND NOT category.FailingOnPhantomJS</testCategory.excluded.browser>
                 <testCategory.excluded.jsf />
             </properties>
             <dependencies>
@@ -651,19 +648,7 @@
         </profile>
 
         <!-- Browsers -->
-        <profile>
-            <id>browser-phantomjs</id>
-            <activation>
-                <property>
-                    <name>browser</name>
-                    <value>phantomjs</value>
-                </property>
-            </activation>
-            <properties>
-                <testCategory.excluded.browser>AND NOT category.FailingOnPhantomJS</testCategory.excluded.browser>
-                <arquillian.drone.browser>phantomjs</arquillian.drone.browser>
-            </properties>
-        </profile>
+        
         <profile>
             <id>browser-chrome</id>
             <activation>
